se cambio el homepage

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "voluntariado_practicas_intermedias",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://201709309.github.io/voluntariadoPracticasIntermedias",
+  "homepage": "https://201709309.github.io/voluntariadoPracticasIntermedias/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
